@@ -120,10 +120,10 @@ namespace System.Web {
 			if (buffer == null || index < 0 || count < 0 || (buffer.Length - index) < count)
 				throw new ArgumentOutOfRangeException ();
 			
-			int length = encoding.GetByteCount (buffer, index, count);
+			int length = encoding.GetMaxByteCount (count);
 			byte [] bytebuffer = GetByteBuffer (length);
-			encoding.GetBytes (buffer, index, count, bytebuffer, 0);
-			output_stream.Write (bytebuffer, 0, length);
+			int realLength = encoding.GetBytes (buffer, index, count, bytebuffer, 0);
+			output_stream.Write (bytebuffer, 0, realLength);
 			if (response.buffer)
 				return;
 
@@ -147,15 +147,15 @@ namespace System.Web {
 			
 			int length;
 			if (index == 0 && count == s.Length) {
-				length = encoding.GetByteCount (s); 
+				length = encoding.GetMaxByteCount (s.Length);
 			} else {
 				char [] chars = s.ToCharArray (index, count);
-				length = encoding.GetByteCount (chars);
+				length = encoding.GetMaxByteCount (chars.Length);
 			}
 
 			byte [] bytebuffer = GetByteBuffer (length);
-			encoding.GetBytes (s, index, count, bytebuffer, 0);
-			output_stream.Write (bytebuffer, 0, length);
+			int realLength = encoding.GetBytes (s, index, count, bytebuffer, 0);
+			output_stream.Write (bytebuffer, 0, realLength);
 			if (response.buffer)
 				return;
 
